--- a/react_webviews/public/index.html
+++ b/react_webviews/public/index.html
@@ -154,7 +154,7 @@
       var pathname = window.location.pathname;
 
       if(pathname.indexOf('appl/webview') !== -1) {
-        var myBaseHrefUrl = '/appl/webview/' + window.location.pathname.split('/')[3] + /' ;
+        var myBaseHrefUrl = '/appl/webview/' + window.location.pathname.split('/')[3] +'/' ;
         myBaseHref.href = myBaseHrefUrl;
         window.sessionStorage.setItem('base_href', myBaseHrefUrl);
       }
