--- a/react_webviews/public/index.html
+++ b/react_webviews/public/index.html
@@ -164,6 +164,8 @@
         myBaseHref.href = myBaseHrefUrl;
         window.sessionStorage.setItem('base_href', myBaseHrefUrl);
       }
+
+      console.log("initialize myBaseHref :" + myBaseHref);
       
     </script>
 
