--- a/react_webviews/public/index.html
+++ b/react_webviews/public/index.html
@@ -162,8 +162,8 @@
         myBaseHref.href = myBaseHrefUrl;
         window.sessionStorage.setItem('base_href', myBaseHrefUrl);
       } else {
-        myBaseHref = '/';
-        myBaseHref.href = myBaseHrefUrl;
+        // myBaseHref = './';
+        // myBaseHref.href = myBaseHrefUrl;
       }
 
     </script>
