--- a/react_webviews/public/index.html
+++ b/react_webviews/public/index.html
@@ -157,13 +157,12 @@
         var myBaseHrefUrl = '/appl/webview/' + window.location.pathname.split('/')[3] +'/' ;
         myBaseHref.href = myBaseHrefUrl;
         window.sessionStorage.setItem('base_href', myBaseHrefUrl);
-      } else if(pathname.indexOf('plutus-webview') !== -1) {
+      }
+      
+      if(pathname.indexOf('plutus-webview') !== -1) {
         var myBaseHrefUrl = '/plutus-webview' + window.location.pathname.split('/')[2] + '/' ;
         myBaseHref.href = myBaseHrefUrl;
         window.sessionStorage.setItem('base_href', myBaseHrefUrl);
-      } else {
-        // myBaseHref = './';
-        // myBaseHref.href = myBaseHrefUrl;
       }
 
     </script>
