--- a/react_webviews/public/index.html
+++ b/react_webviews/public/index.html
@@ -150,25 +150,28 @@
     <base id="myBaseHref"  />
 
     <script>
+
+      window.localStorage.setItem('base_href', '');
+
       var myBaseHref =  document.getElementById('myBaseHref');
       var pathname = window.location.pathname;
 
       if(pathname.indexOf('appl/webview') !== -1) {
         var myBaseHrefUrl = '/appl/webview/' + window.location.pathname.split('/')[3] +'/' ;
         myBaseHref.href = myBaseHrefUrl;
-        window.sessionStorage.setItem('base_href', myBaseHrefUrl);
+        window.localStorage.setItem('base_href', myBaseHrefUrl);
       }
       
       if(pathname.indexOf('plutus-webview') !== -1) {
         var myBaseHrefUrl = '/plutus-webview' + window.location.pathname.split('/')[2] + '/' ;
         myBaseHref.href = myBaseHrefUrl;
-        window.sessionStorage.setItem('base_href', myBaseHrefUrl);
+        window.localStorage.setItem('base_href', myBaseHrefUrl);
       }
 
       if(pathname.indexOf('webapp') !== -1) {
         var myBaseHrefUrl = '/webapp/';
         myBaseHref.href = myBaseHrefUrl;
-        window.sessionStorage.setItem('base_href', myBaseHrefUrl);
+        window.localStorage.setItem('base_href', myBaseHrefUrl);
       }
 
     </script>
