--- a/react_webviews/public/index.html
+++ b/react_webviews/public/index.html
@@ -3,9 +3,36 @@
 
 <head>
   <style>
-
+    /* default fallback colors for IE support*/
     :root {
     --skelton-boot-background: #E7E7E7;
+    --secondary: #35cb5d;
+    --highlight: #f6f2ff;
+    --skelton-color: #E7E7E7;
+    --primary: #4f2da7;
+    --header-background: undefined;
+    --default: #4a4a4a;
+    --label: #a2a2a2;
+    --desktop-width: 640px;
+    --tooltip-width: 540px;
+    --color-action-disable: #E8ECF1;
+    --dark: #0A1D32;
+    --steelgrey: #767E86;
+    --on-focus-background: #119A4B;
+    --on-hover-background: #35cb5d;
+    --on-hover-secondary-background: #35cb5d;
+    --secondary-green: #7ED321;
+    --mustard: #FFDA2C;
+    --pink: #F16FA0;
+    --purple: #A38CEB;
+    --lime: #7ED321;
+    --red: #D0021B;
+    --primaryVariant1: #DFD8EF;
+    --primaryVariant4: #482998;
+    --spacing: 10px;
+    --gunmetal: #161A2E;
+    --linkwater: #D3DBE4;
+    --border-radius: 4px;
     }
 
 
@@ -178,11 +205,11 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-  <!--
+    <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
-
+      
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
