--- a/react_webviews/public/support.html
+++ b/react_webviews/public/support.html
@@ -61,25 +61,25 @@
         <div class="icons">
           <ul>
             <li>
-              <img src="./chrome.png" alt="Google Chrome" width="60"/>
+              <img src="./images/chrome.png" alt="Google Chrome" width="60"/>
               <div class="">
                 Chrome
               </div>
             </li>
             <li>
-              <img src="./safari.png" alt="Safari" width="60"/>
+              <img src="./images/safari.png" alt="Safari" width="60"/>
               <div class="">
                 Safari
               </div>
             </li>
             <li>
-              <img src="./ff.png" alt="Firefox" width="60"/>
+              <img src="./images/ff.png" alt="Firefox" width="60"/>
               <div class="">
                 Firefox
               </div>
             </li>
             <li>
-                <img src="./ie11.jpeg" alt="Firefox" width="60"/>
+                <img src="./images/ie11.jpeg" alt="Firefox" width="60"/>
                 <div class="">
                   IE 11
                 </div>
