--- a/react_webviews/public/index.html
+++ b/react_webviews/public/index.html
@@ -174,7 +174,7 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-    <!-- <base id="myBaseHref"  /> -->
+    <base id="myBaseHref" href="/webapp/"  />
     <script>
       var browser = window.navigator.userAgent;
       if(browser.indexOf("MSIE") !== -1) {
@@ -203,7 +203,7 @@
 
       if(myBaseHrefUrl) {
         // myBaseHref.href = myBaseHrefUrl;
-        document.write("<base href="+ myBaseHrefUrl+" />");
+        // document.write("<base href="+ myBaseHrefUrl+" />");
         window.localStorage.setItem('base_href', myBaseHrefUrl);
       }
 
