updated hardcoded partner name from support html file

--- a/react_webviews/public/support.html
+++ b/react_webviews/public/support.html
@@ -57,7 +57,7 @@
   <body>
     <div class="box">
       <div class="content">
-        Hey, the browser you are currently using will not allow fisdom to give you a great experience. We recommend that you use the following browsers:
+        Hey, the browser you are currently using will not allow us to give you a great experience. We recommend that you use the following browsers:
         <div class="icons">
           <ul>
             <li>
