--- a/react_webviews/public/index.html
+++ b/react_webviews/public/index.html
@@ -153,14 +153,14 @@
       var myBaseHref =  document.getElementById('myBaseHref');
       var pathname = window.location.pathname;
 
-      if(pathname.indexOf('appl/webview') !== -1) {
-        var myBaseHrefUrl = '/appl/webview/' + window.location.pathname.split('/')[3] +'/' ;
+      if(pathname.indexOf('appl/web') !== -1) {
+        var myBaseHrefUrl = '/appl/web/' + window.location.pathname.split('/')[3] +'/' ;
         myBaseHref.href = myBaseHrefUrl;
         window.sessionStorage.setItem('base_href', myBaseHrefUrl);
       }
       
-      if(pathname.indexOf('plutus-webview') !== -1) {
-        var myBaseHrefUrl = '/plutus-webview' + window.location.pathname.split('/')[2] + '/' ;
+      if(pathname.indexOf('plutus-webapp') !== -1) {
+        var myBaseHrefUrl = '/plutus-webapp' + window.location.pathname.split('/')[2] + '/' ;
         myBaseHref.href = myBaseHrefUrl;
         window.sessionStorage.setItem('base_href', myBaseHrefUrl);
       }
