--- a/react_webviews/public/index.html
+++ b/react_webviews/public/index.html
@@ -174,7 +174,7 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-    <base id="myBaseHref" href="/webapp/"  />
+    <base id="myBaseHref" />
     <script>
       var browser = window.navigator.userAgent;
       if(browser.indexOf("MSIE") !== -1) {
