--- a/react_webviews/public/index.html
+++ b/react_webviews/public/index.html
@@ -223,7 +223,8 @@
 
     </script>
 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <!-- TODO, will add later with correct config inside manifest file -->
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json"> -->
     <link rel="shortcut icon" id="favicon" href="%PUBLIC_URL%/favicon.ico">
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
